# trailers

./: .gitignore  .sqruff  Cargo.toml  README.md
.github/: dependabot.yaml
.github/actions/setup-rust/: action.yaml
.github/workflows/: analysis.yaml  cd.yaml  ci.yaml  tests.yaml
api/: Cargo.toml
api/src/: config.rs  constants.rs  main.rs
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml  build.rs
core/src/: commands.rs  config.rs  constants.rs  enums.rs  graphql.rs  identity.rs  identity_client.rs  jobs.rs  lib.rs  models.rs  pagination.rs
core/src/commands/: genre_commands.rs  keyword_commands.rs  mod.rs  person_commands.rs  session_commands.rs  title_cast_commands.rs  title_commands.rs  title_crew_commands.rs  title_recommendation_commands.rs  title_stat_commands.rs  user_commands.rs  user_title_tie_commands.rs  video_commands.rs  video_recommendation_commands.rs  video_view_commands.rs  watch_provider_commands.rs
core/src/graphql/: guards.rs  input_objects.rs  input_validators.rs  mod.rs  mutation_root.rs  objects.rs  query_root.rs
core/src/graphql/objects/: mod.rs  title_object.rs  user_object.rs
migrations/: 20260107221456_initial_setup.down.sql  20260107221456_initial_setup.up.sql  20260116183843_create_table_users.up.sql  20260130223609_create_table_sessions.up.sql  20260201030744_create_table_titles.down.sql  20260201030744_create_table_titles.up.sql  20260202170720_create_table_genres.down.sql  20260202170720_create_table_genres.up.sql  20260202194049_create_table_keywords.down.sql  20260202194049_create_table_keywords.up.sql  20260202195803_create_table_persons.up.sql  20260202203410_create_tables_cast_and_crew.down.sql  20260202203410_create_tables_cast_and_crew.up.sql  20260202221738_create_table_videos.down.sql  20260202221738_create_table_videos.up.sql  20260202224700_create_table_user_title_ties.down.sql  20260202224700_create_table_user_title_ties.up.sql  20260202231605_create_table_video_views.down.sql  20260202231605_create_table_video_views.up.sql  20260202233056_create_table_video_recommendations.down.sql  20260202233056_create_table_video_recommendations.up.sql  20260203164637_create_table_watch_providers.down.sql  20260203164637_create_table_watch_providers.up.sql  20260218191814_alter_table_users.down.sql  20260218191814_alter_table_users.up.sql  20260218192335_drop_table_sessions.down.sql  20260312171642_create_table_title_recommendations.down.sql  20260312171642_create_table_title_recommendations.up.sql  20260313213422_drop_columns_in_user_title_ties.down.sql  20260313213422_drop_columns_in_user_title_ties.up.sql  20260314194639_fix_titles_index.down.sql  20260314194639_fix_titles_index.up.sql  20260315155541_create_table_title_stats.down.sql  20260315155541_create_table_title_stats.up.sql  20260315171834_replace_function_title_relevance.up.sql  20260316013429_fix_psql_func_get_title_relevance.up.sql  20260317155909_drop_table_video_recommendations.down.sql  20260317155909_drop_table_video_recommendations.up.sql  20260322222012_create_index_genres_watch_providers.down.sql  20260322222012_create_index_genres_watch_providers.up.sql  (+7 more)
monitor/: Cargo.toml
monitor/src/: config.rs  handlers.rs  ip_geo.rs  mailer.rs  main.rs  populate.rs  tmdb.rs
