[workspace]
resolver = "3"
members = ["api", "cli", "core", "monitor"]

[workspace.package]
version = "0.0.0-alpha.17"
edition = "2024"
authors = ["Javier E. <jaedns@gmail.com>"]
homepage = "https://trailers.mango3.app"
repository = "https://github.com/mangocubed/trailers"

[workspace.dependencies]
anyhow = "1.0.102"
apalis = "1.0.0-rc.7"
async-graphql = "8.0.0-rc.4"
chrono = { version = "0.4.44", features = ["serde"] }
envconfig = "0.11.1"
reqwest = { version = "0.13.2", features = ["json"] }
serde = "1.0.228"
tokio = { version = "1.50.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = { version = "2.5.8", features = ["serde"] }
trailers-core = { path = "./core", default-features = false }
trailers-monitor.path = "./monitor"
