[workspace]
resolver = "3"
members = ["api", "cli", "core", "monitor"]

[workspace.package]
version = "0.0.0-alpha.27"
edition = "2024"
authors = ["Javier E. <jaedns@gmail.com>"]
homepage = "https://filmstrip.mango3.app"
repository = "https://github.com/mangocubed/trailers"

[workspace.dependencies]
anyhow = "1.0.102"
apalis = "1.0.0-rc.7"
async-graphql = "8.0.0-rc.4"
chrono = { version = "0.4.44", features = ["serde"] }
envconfig = "0.11.1"
reqwest = { version = "0.13.2", features = ["json"] }
sentry = { version = "0.47.0", features = ["logs", "tracing"] }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.52.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tracing = "0.1.44"
url = { version = "2.5.8", features = ["serde"] }
trailers-core = { path = "./core", default-features = false }
trailers-monitor.path = "./monitor"
toolbox = { git = "https://github.com/mangocubed/toolbox.git" }
