[package]
name = "trailers-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
async-graphql = { workspace = true, features = [
    "apollo_persisted_queries",
    "apollo_tracing",
    "log",
] }
async-graphql-axum = "8.0.0-rc.1"
axum = "0.8.8"
tokio.workspace = true
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
trailers-core.workspace = true
