[package]
name = "trailers-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
async-graphql = { workspace = true, features = [
    "apollo_persisted_queries",
    "apollo_tracing",
    "log",
] }
async-graphql-axum = "8.0.0-rc.2"
axum = "0.8.8"
axum-client-ip = "1.3.1"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
envconfig.workspace = true
tokio.workspace = true
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }
tracing.workspace = true
tracing-subscriber.workspace = true
trailers-core = { workspace = true, features = ["graphql"] }
