[package]
name = "trailers-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
tokio.workspace = true
trailers-core = { workspace = true, features = ["graphql"] }
