[package]
name = "trailers-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
clap = { version = "4.5.61", features = ["derive"] }
tokio.workspace = true
trailers-core = { workspace = true, features = ["graphql"] }
trailers-monitor.workspace = true
