[package]
name = "trailers-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[build-dependencies]
chrono.workspace = true

[dependencies]
anyhow.workspace = true
apalis.workspace = true
apalis-redis = "1.0.0-rc.7"
async-graphql = { workspace = true, features = [
    "chrono",
    "chrono-duration",
    "url",
    "uuid",
], optional = true }
cached = { version = "0.59.0", features = [
    "async",
    "redis_store",
    "redis_tokio",
] }
chrono.workspace = true
envconfig.workspace = true
md-5 = "0.11.0"
regex = { version = "1.12.3", optional = true }
reqwest.workspace = true
rust_iso3166 = "0.1.14"
serde.workspace = true
serde_json.workspace = true
sqlx = { version = "0.8.6", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
    "uuid",
] }
tokio.workspace = true
url.workspace = true
uuid = { version = "1.23.1", features = ["serde"] }
toolbox.workspace = true

[features]
default = ["graphql"]
graphql = ["dep:async-graphql", "dep:regex", "toolbox/graphql"]
