[package]
name = "trailers-monitor"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
apalis.workspace = true
apalis-cron = "1.0.0-rc.2"
chrono.workspace = true
envconfig.workspace = true
lettre = { version = "0.11.19", features = [
    "smtp-transport",
    "tokio1-native-tls",
] }
reqwest.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
trailers-core.workspace = true
