[package]
name = "trailers-monitor"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
apalis = { workspace = true, features = ["sentry"] }
apalis-cron = "1.0.0-rc.6"
chrono.workspace = true
envconfig.workspace = true
lettre = { version = "0.11.20", features = [
    "smtp-transport",
    "tokio1-native-tls",
] }
reqwest.workspace = true
sentry = { workspace = true, features = ["tower"] }
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
trailers-core.workspace = true
