[package]
name = "trailers-monitor"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
apalis = { workspace = true, features = ["sentry"] }
apalis-cron = "1.0.0-rc.7"
chrono.workspace = true
envconfig.workspace = true
reqwest.workspace = true
sentry = { workspace = true, features = ["tower"] }
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
trailers-core.workspace = true
toolbox = { workspace = true, features = ["mailer"] }
